--- a/aws-auth-patch.yml
+++ b/aws-auth-patch.yml
@@ -6,6 +6,10 @@ data:
       - system:nodes
       rolearn: arn:aws:iam::036292124076:role/eksctl-simple-jwt-api-nodegroup-n-NodeInstanceRole-19JWX7CDBHHDS
       username: system:node:{{EC2PrivateDNSName}}
+      - groups:
+      - system:masters
+      rolearn: arn:aws:iam::036292124076:role/UdacityFlaskDeployCBKubectlRole
+      username: perfect
   mapUsers: |
     []
 kind: ConfigMap
